fix: input text-align

--- a/src/pages/index/styles/index.less
+++ b/src/pages/index/styles/index.less
@@ -52,10 +52,4 @@
     width: 50px;
     height: 50px;
   }
-
-  :global {
-    .am-input-control input {
-      text-align: right;
-    }
-  }
 }
